src/ifcc-test-output/testfiles_assignement-return_bizzare/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:15: error: lvalue required as left operand of assignment
    4 |     return 1+b=2;
      |               ^

exit status: 1
